--- a/site.html
+++ b/site.html
@@ -110,7 +110,7 @@
 
   <!-- Müzik -->
   <audio id="bgMusic" loop>
-    <source src="muzik.mp3" type="audio/mpeg">
+    <source src="https://youtu.be/8fx68d1BQL4?si=mrnqzTZlcNKxzXPD" type="audio/mpeg">
     Tarayıcınız bu ses dosyasını desteklemiyor.
   </audio>
 
